add header file

--- a/index.html
+++ b/index.html
@@ -4,8 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Travel and Tourism </title>
+    <link rel="stylesheet" href="Styles/style.css">
 </head>
 <body>
-    
+      
+      <header>
+        <section>
+            <nav>
+                <div class="container">
+                    <div class="nav-toggle">
+                        <a href="#"><i class="fa-solid fa-bars"></i></a>
+                    </div>
+                    <div class="nav-content">
+                        <div class="nav-icon">
+                            <img src="Images/Group 40071 (2).png" alt="Please Wait">
+                            <h2 class="nav-title"> <span>Travel</span> and <span>Tourism</span></h2>
+                        </div>
+                        <div class="nav-menu">
+                            <ul class="nav-list">
+                                <li><a href="#">Home</a></li>
+                                <li><a href="#">Packages</a></li>
+                                <li><a href="#">Testimonial</a></li>
+                                <li><a href="#">Blog</a></li>
+                                <li><a href="#">Contact</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </nav>
+        </section>
+    </header>
 </body>
 </html>
